--- a/Direct3D 11/Project 4/Project 4.vcxproj.filters
+++ b/Direct3D 11/Project 4/Project 4.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Project 4\src\rendering.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Project 4\src\timer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Project 4\src\stdafx.h">
@@ -48,6 +51,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Project 4\src\shader_utils.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Project 4\src\transform.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Project 4\src\timer.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
