--- a/Direct3D 11/Project 4/Project 4.vcxproj
+++ b/Direct3D 11/Project 4/Project 4.vcxproj
@@ -182,6 +182,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Project 4\src\timer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Project 4\src\engine.hpp" />
@@ -190,6 +191,8 @@
     <ClInclude Include="Project 4\src\shader_utils.hpp" />
     <ClInclude Include="Project 4\src\stdafx.h" />
     <ClInclude Include="Project 4\src\targetver.h" />
+    <ClInclude Include="Project 4\src\timer.hpp" />
+    <ClInclude Include="Project 4\src\transform.hpp" />
     <ClInclude Include="Project 4\src\version.hpp" />
   </ItemGroup>
   <ItemGroup>
