--- a/Direct3D 11/Project 5/Project 5.vcxproj.filters
+++ b/Direct3D 11/Project 5/Project 5.vcxproj.filters
@@ -59,6 +59,9 @@
     <ClInclude Include="Project 5\src\timer.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Project 5\src\camera.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Project 5\shaders\effect.fx">
