Compiling at runtime must now be explicitly enabled by defining ENGINE_COMPILE_SHADERS

--- a/Direct3D 11/Project 6/Project 6.vcxproj.filters
+++ b/Direct3D 11/Project 6/Project 6.vcxproj.filters
@@ -70,5 +70,8 @@
     <FxCompile Include="Project 6\shaders\effect_VS.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
+    <FxCompile Include="Project 6\shaders\effect_PSSolid.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
