Removed effect.fx from build

--- a/Direct3D 11/Project 7/Project 7.vcxproj
+++ b/Direct3D 11/Project 7/Project 7.vcxproj
@@ -198,7 +198,12 @@
     <ClInclude Include="Project 7\src\version.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <FxCompile Include="Project 7\shaders\effect.fx" />
+    <FxCompile Include="Project 7\shaders\effect.fx">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </FxCompile>
     <FxCompile Include="Project 7\shaders\effect_PS.hlsl">
       <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">PS</EntryPointName>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
