--- a/Direct3D 11/Project 3/Project 3.vcxproj
+++ b/Direct3D 11/Project 3/Project 3.vcxproj
@@ -193,7 +193,12 @@
     <ClInclude Include="Project 3\src\version.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <FxCompile Include="Project 3\shaders\effect.fx" />
+    <FxCompile Include="Project 3\shaders\effect.fx">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </FxCompile>
     <FxCompile Include="Project 3\shaders\effect_PS.hlsl">
       <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">PS</EntryPointName>
       <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">PS</EntryPointName>
