--- a/Direct3D 11/Project 6/Project 6.vcxproj
+++ b/Direct3D 11/Project 6/Project 6.vcxproj
@@ -196,7 +196,12 @@
     <ClInclude Include="Project 6\src\version.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <FxCompile Include="Project 6\shaders\effect.fx" />
+    <FxCompile Include="Project 6\shaders\effect.fx">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </FxCompile>
     <FxCompile Include="Project 6\shaders\effect_PS.hlsl">
       <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">PS</EntryPointName>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
