--- a/Direct3D 11/.gitignore
+++ b/Direct3D 11/.gitignore
@@ -1,17 +1,17 @@
 ######################################################################
-# User-specific files
+# User-Specific Files
 ######################################################################
 *.suo
-*.user
+#*.user
 *.userosscache
 *.sln.docstates
 ######################################################################
-# Intermediate results
+# Intermediate Results
 ######################################################################
 [Tt]emp/
 [Tt]mp/
 ######################################################################
-# Build results
+# Build Results
 ######################################################################
 [Dd]ebug/
 [Dd]ebugPublic/
@@ -21,10 +21,11 @@ x64/
 x86/
 bld/
 [Bb]in/
-[Oo]bj/
+#[Oo]bj/
 [Ll]og/
 ######################################################################
-# Visual Studio 2015 cache/options directory
+# Visual Studio 2015 Cache/Options Directory
+######################################################################
 .vs/
 ######################################################################
 # MSTest test Results
@@ -37,7 +38,7 @@ bld/
 *_i.h
 *.ilk
 *.meta
-*.obj
+#*.obj
 *.pch
 *.pdb
 *.pgc
@@ -57,7 +58,7 @@ bld/
 *.svclog
 *.scc
 ######################################################################
-# Visual C++ cache files
+# Visual C++ Cache Files
 ######################################################################
 ipch/
 *.aps
@@ -69,14 +70,15 @@ ipch/
 *.VC.db
 *.VC.VC.opendb
 ######################################################################
-# Visual Studio profiler
+# Visual Studio Profiler
 ######################################################################
 *.psess
 *.vsp
 *.vspx
 *.sap
 ######################################################################
-# Visual Studio cache files
+# Visual Studio Cache Files
+######################################################################
 # files ending in .cache can be ignored
 *.[Cc]ache
 # but keep track of directories ending in .cache
