--- a/Direct3D 11/.gitattributes
+++ b/Direct3D 11/.gitattributes
@@ -8,18 +8,45 @@
 ###############################################################################
 
 # Header Files
-*.h			text eol=crlf
-*.hpp		text eol=crlf
-*.inc		text eol=crlf
-*.inl		text eol=crlf
-*.tpp		text eol=crlf
-
-# Shader Files
-* .fx   text eol=crlf
-*.hlsl		text eol=crlf
-*.hlsli		text eol=crlf
+*.h                                 text eol=crlf
+*.hpp                               text eol=crlf
+*.inc                               text eol=crlf
+*.inl                               text eol=crlf
+*.tpp                               text eol=crlf
 
 # Source Files
-*.c			text eol=crlf
-*.cc		text eol=crlf
-*.cpp		text eol=crlf
+*.cpp                               text eol=crlf
+
+# Shader Files
+*.fx                                text eol=crlf
+*.hlsl                              text eol=crlf
+*.hlsli                             text eol=crlf
+
+# Resource Files
+*.rc                                text eol=crlf
+
+# Visual Studio
+*.filters                           text eol=crlf
+*.props                             text eol=crlf
+*.sln                               text eol=crlf
+*.users                             text eol=crlf
+*.vcxproj                           text eol=crlf
+
+###############################################################################
+# Explicitly declare programming languages for the following files
+###############################################################################
+
+# Header Files
+*.h                                 linguist-language=C++
+*.hpp                               linguist-language=C++
+*.inc                               linguist-language=C++
+*.inl                               linguist-language=C++
+*.tpp                               linguist-language=C++
+
+# Source Files
+*.cpp                               linguist-language=C++
+
+# Shader Files
+*.fx                                linguist-language=HLSL
+*.hlsl                              linguist-language=HLSL
+*.hlsli                             linguist-language=HLSL
