--- a/Direct3D 11/appveyor.yml
+++ b/Direct3D 11/appveyor.yml
@@ -16,14 +16,14 @@ platform:
   - x86
 environment:
   matrix:
-  - solution_name: Project 1/Project 1.sln
-  - solution_name: Project 2/Project 2.sln
-  - solution_name: Project 3/Project 3.sln
-  - solution_name: Project 4/Project 4.sln
-  - solution_name: Project 5/Project 5.sln
-  - solution_name: Project 6/Project 6.sln
-  - solution_name: Project 7/Project 7.sln
-  - solution_name: Project 8/Project 8.sln
+  - solution_name: "Project 1/Project 1.sln"
+  - solution_name: "Project 2/Project 2.sln"
+  - solution_name: "Project 3/Project 3.sln"
+  - solution_name: "Project 4/Project 4.sln"
+  - solution_name: "Project 5/Project 5.sln"
+  - solution_name: "Project 6/Project 6.sln"
+  - solution_name: "Project 7/Project 7.sln"
+  - solution_name: "Project 8/Project 8.sln"
 
 ###############################################################################
 # Build Configuration
