--- a/Projects/.gitignore
+++ b/Projects/.gitignore
@@ -1,86 +1,63 @@
-######################################################################
+###############################################################################
 # User-Specific Files
-######################################################################
+###############################################################################
 *.suo
-#*.user
-*.userosscache
-*.sln.docstates
-######################################################################
+*.user
+
+###############################################################################
 # Intermediate Results
-######################################################################
+###############################################################################
 [Tt]emp/
 [Tt]mp/
-######################################################################
+
+###############################################################################
 # Build Results
-######################################################################
+###############################################################################
 [Dd]ebug/
-[Dd]ebugPublic/
 [Rr]elease/
-[Rr]eleases/
 x64/
 x86/
-bld/
 [Bb]in/
 #[Oo]bj/
 [Ll]og/
-######################################################################
-# Visual Studio 2015 Cache/Options Directory
-######################################################################
+Shaders/src/*/
+
+###############################################################################
+# Visual Studio Cache/Options Directory
+###############################################################################
 .vs/
-######################################################################
-# MSTest test Results
-######################################################################
-[Tt]est[Rr]esult*/
-[Bb]uild[Ll]og.*
-######################################################################
-*_i.c
-*_p.c
-*_i.h
-*.ilk
-*.meta
-#*.obj
-*.pch
-*.pdb
-*.pgc
-*.pgd
-*.rsp
-*.sbr
-*.tlb
-*.tli
-*.tlh
-*.tmp
-*.tmp_proj
-*.log
-*.vspscc
-*.vssscc
-.builds
-*.pidb
-*.svclog
-*.scc
-######################################################################
-# Visual C++ Cache Files
-######################################################################
-ipch/
-*.aps
-*.ncb
-*.opendb
-*.opensdf
-*.sdf
-*.cachefile
-*.VC.db
-*.VC.VC.opendb
-######################################################################
-# Visual Studio Profiler
-######################################################################
-*.psess
-*.vsp
-*.vspx
-*.sap
-######################################################################
+
+###############################################################################
 # Visual Studio Cache Files
-######################################################################
+###############################################################################
 # files ending in .cache can be ignored
 *.[Cc]ache
 # but keep track of directories ending in .cache
 !*.[Cc]ache/
-######################################################################
+
+###############################################################################
+# Visual C++ Cache Files
+###############################################################################
+ipch/
+*.aps
+*.cachefile
+*.ncb
+*.opendb
+*.opensdf
+*.sdf
+*.VC.db
+*.VC.VC.opendb
+
+###############################################################################
+# Visual Studio Profiler
+###############################################################################
+*.diagsession
+*.psess
+*.sap
+*.vsp
+*.vspx
+
+###############################################################################
+# Nsight
+###############################################################################
+*.nvuser
